# kodcode

./: .gitignore  .gitmodules  Dockerfile.test  README.md  main.py  pyproject.toml  requirements.txt
data_step1/CodeGen_leetcode_10_1741075944/: CodeGen_instruction_leetcode_10_1741075944.jsonl  CodeGen_instruction_leetcode_10_1741075944_all.jsonl  (+4 more)
demo/: Failed_KodCode_prefill_200_1741214325_prepared.jsonl  KodCode_algorithm_100_1741212598.json  KodCode_leetcode_100_1741214688.json  KodCode_prefill_200_1741214325.json  SFT_KodCode_algorithm_100_1741212598.json  SFT_KodCode_leetcode_100_1741214688.json  SFT_KodCode_prefill_200_1741214325.json  pass_at_k_KodCode_algorithm_100_1741212598.csv  pass_at_k_KodCode_algorithm_100_1741212598.json  pass_at_k_KodCode_prefill_200_1741214325.json
paper/: kodcode_main_fig.pptx
pipeline/: README.md  completion_gpt.py  completion_open_model.py  gpt_api_call.py  model_configs.json  step1.1_gen_questions.py  step1.2_completion.sh  step1.2_gpt_completion.sh  step1.2_open_model_completion.sh  step1.3_proccess_and_sanitize.py  step1.3_process_and_sanitize.py  step2.1_completion.sh  step2.1_gpt_completion.sh  step2.1_open_model_completion.sh  step2.2_gen_unit_tests.py  step2.3_run_all_tests.sh  step2.4_gen_verified_triplets.py  step3.1.1_style_converter.py  step3.1.2_completion.sh  step3.1.3_gen_complete_triplets.py  step3.2_combine_kodcode.py  step3.3.1_proccess_sft.py  step3.3.2_completion_sft.sh  step3.3.3_gen_unit_tests_sft.py  step3.3.4_run_all_tests.sh  step3.3.5_gen_sft_datasets.py  utils.py
seeds/: image_check.ipynb
(+4341 files in other folders)
