[project]
name = "kodcode"
version = "0.1.0"
description = "A synthetic dataset generation framework that produces diverse coding questions and verifiable solutions."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.4.0",
    "beautifulsoup4>=4.13.3",
    "bitsandbytes>=0.45.3",
    "datasets>=3.3.2",
    "faiss-gpu>=1.7.2",
    "fake-useragent>=2.0.3",
    "flask>=3.1.0",
    "imageio>=2.37.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "keras>=3.9.0",
    "lingua-language-detector>=2.0.2",
    "lxml>=5.3.1",
    "matplotlib>=3.10.1",
    "ml-collections>=1.0.0",
    "numpy>=1.26.4",
    "openai>=1.65.5",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "peft>=0.14.0",
    "pillow>=11.1.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ray>=2.43.0",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=3.4.1",
    "sentencepiece>=0.2.0",
    "sphinx-pyproject>=0.3.0",
    "statsmodels>=0.14.4",
    "sympy>=1.13.1",
    "torch>=2.5.1",
    "transformers>=4.49.0",
    "trl>=0.15.2",
    "tweepy>=4.15.0",
    "typing-extensions>=4.12.2",
    "vllm==0.7.1",
    "wandb>=0.19.8",
    "xgboost>=2.1.4",
]
